Fix Bug 309891 - Filter buttons and context menu option are not shown

FIXED-IN: 4.9.4
BUG: 309891