kmmainwidget.h
@@ -459,6 +459,7 @@ class KMAIL_EXPORT KMMainWidget : public QWidget
     void slotShowNotification();
     void slotConfigureAutomaticArchiving();
   private:
+    void checkAkonadiServerManagerState();
     void updateHtmlMenuEntry();
 
     void updateMoveAction( const Akonadi::CollectionStatistics& statistic );
@@ -556,6 +557,7 @@ class KMAIL_EXPORT KMMainWidget : public QWidget
     void slotDeletionCollectionResult(KJob* job);
     void slotServerSideSubscription();
     void slotFetchItemsForFolderDone(KJob*job);
+    void slotServerStateChanged(Akonadi::ServerManager::State state);
 
 private:
     // Message actions
